feat(logging): add colorized log viewer script and npm command
- Introduced a new script `colorize-logs.ts` for colorizing and tailing NDJSON log files.
- The script supports various features including log level filtering, file selection, and pretty-printing of log data.
- Added a new npm command `logs` to execute the log viewer script with an optional environment log path.

--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "db:studio": "drizzle-kit studio --verbose",
     "db:seed": "drizzle-kit seed",
     "db:drop": "node ./scripts/dropDatabase.ts",
+    "logs": "node ./scripts/colorize-logs.ts --use-env-log-path",
     "renderer:generate-routes": "tsr generate",
     "renderer:watch-routes": "tsr watch",
     "preversion": "npm test",
