--- a/package.json
+++ b/package.json
@@ -210,6 +210,7 @@
     "typescript": "^5.8.0",
     "typescript-eslint": "^8.18.2",
     "vite": "^7.0.2",
-    "vitest": "^4.0.6"
+    "vitest": "^4.0.6",
+    "yoctocolors": "^2.1.2"
   }
 }
