Refactor songId type from string to number across various components and queries
- Updated toggleSongIsFavorite to accept songId as a number.
- Modified updateQueueOnSongPlay to handle songId as a number and adjusted queue structure accordingly.
- Changed album, artist, genre, listen, playlist, and song queries to use number for songId and related identifiers.
- Adjusted route parameters in main-player routes to convert string params to numbers for songId, albumId, artistId, genreId, and playlistId.
- Updated local storage utility functions to handle number arrays instead of string arrays for ignored artists and songs.
- Refined metadata management functions to ensure consistent handling of artist and genre data.
- Adjusted types in app.d.ts to reflect changes in songId and related identifiers.
- Fixed various instances in the UI where songId was treated as a string instead of a number.

--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -11,20 +11,20 @@
   "compilerOptions": {
     "composite": true,
     "jsx": "react-jsx",
-    "baseUrl": ".",
     "resolveJsonModule": true,
     "module": "ES2022",
     "moduleResolution": "bundler",
     "sourceMap": true,
     "paths": {
+      "*": [ "./*" ],
       "@renderer/*": [
-        "src/renderer/src/*"
+        "./src/renderer/src/*"
       ],
       "@common/*": [
-        "src/common/*"
+        "./src/common/*"
       ],
       "@assets/*": [
-        "src/renderer/src/assets/*"
+        "./src/renderer/src/assets/*"
       ]
     },
     "types": [ "vite/client" ],
