Refactor import paths for conversion utilities and update playlist IDs to use enums
- Changed import paths for conversion functions in multiple files to use '../utils/convert' instead of '../../common/convert'.
- Updated playlist IDs in the filesystem and related components to use the SpecialPlaylists enum for better maintainability.
- Adjusted types for song and album data structures to use numbers instead of strings where applicable.
- Modified API calls to handle data responses correctly in various components.
- Cleaned up unused parameters and improved code readability across several files.

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -16,6 +16,7 @@
       "electron-vite/node"
     ],
     "paths": {
+      "@common/*": [ "./src/common/*" ],
       "@main/*": [ "./src/main/*" ], "@db/*": [ "./src/main/db/*" ], },
     "noImplicitAny": true,
     "useUnknownInCatchVariables": true,
